# table_mapping

./: .gitignore  CMakeLists.txt  README.md  exp.rviz
PCLV/: CMakeLists.txt  README.md  construction.cpp  construction.h  gsurface.cpp  gsurface.h  gsurface.ui  main.cpp  normal_pointrepresentation.cpp  normal_pointrepresentation.h  openni_grabber1.cpp  openni_grabber1.h  registration1.cpp  registration1.h  widget.cpp  widget.h  widget.ui
control_morse/: CMakeLists.txt  cvimg.pgm  package.xml
control_morse/include/control_morse/: Quadtree.hpp
control_morse/launch/: axclient.py  camera_down.py  mongodb_store.launch  patrol.launch  startup_loof  tum_kitchen_morse_nocamera.launch
control_morse/launch/launch_test/: expreal.launch  getmap.launch  primitive_service.launch  scan_test.launch
control_morse/msg/: sweep_scan.msg
control_morse/src/: getmap.cpp  heartbeat.cpp  ptu_control.cpp  vizmarker.cpp
control_morse/srv/: Pause.srv  WholeScan.srv
pcl_tools/: CMakeLists.txt
pcl_tools/include/: pcl_all.h
pcl_tools/src/: force_dense.cpp  normal_view.cpp  remove_nan.cpp  remove_outliers.cpp
primitive_extraction/launch/: extraction_no_marker.launch
primitive_extraction/src/: extraction.cpp
ransac_primitives/include/ransac_primitives/: primitive_extractor.h  primitive_extractor.hpp
table_detection/: CMakeLists.txt  package.xml
table_detection/include/table_detection/: table_tool.cpp  table_tool.h  table_tool.hpp  viz_points.cpp  viz_points.h
table_detection/launch/: db_cloud_extraction.launch  detection.launch  detection0.launch  detection1.launch  detection2.launch  detection4.launch  viz_all_table.launch  viz_all_whole_table.launch  viz_specified_convex.launch  viz_specified_table.launch  viz_table.launch  viz_whole_table.launch
table_detection/msg/: Table.msg  table_increment.msg  table_increment_arr.msg  table_merge_info.msg  table_neighbour.msg  table_neighbour_arr.msg
table_detection/src/: .grabber.cpp.swp  db_cloud_extraction.cpp  db_table_extraction.cpp  db_table_maintaining.cpp  detection.cpp  grabber.cpp  table_all.cpp  table_status.cpp  viz_convex.cpp
table_detection/srv/: db_extract.srv  db_extract_whole_table.srv  db_merge.srv
table_detection/test/: centreprint.cpp  convex_size.cpp  neighbour_change.cpp
table_registration/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
table_registration/include/table_registration/: registration.h  registration_operator.h  registration_operator.hpp
table_registration/launch/: detection.launch  polygon.launch  viz_all_icp.launch  viz_all_table_cloud.launch  viz_all_whole_table_cloud.launch  viz_icp_cloud.launch  viz_specified_convex.launch  viz_specified_indices.launch  viz_specified_polygen.launch  viz_specified_whole_table.launch  viz_whole_table.launch
table_registration/msg/: ICP_Cloud.msg
table_registration/src/: db_cloud_registration.cpp  registration.cpp  showpolygen.cpp  viz_global_cloud.cpp
